--- a/ansible/roles/tsidp/tasks/main.yml
+++ b/ansible/roles/tsidp/tasks/main.yml
@@ -8,6 +8,7 @@
   ansible.builtin.copy:
       src: "tsidp/"
       dest: "/etc/containers/systemd/tsidp/"
+  register: tsidp_files_changed
   notify: Restart Tsidp service
 
 - name: Ensure tsidp service secrets are available
@@ -16,10 +17,12 @@
       name: "ts-authkey"
       data: "{{ tailscale.ts_authkey }}"
   no_log: true
+  register: tsidp_secrets_changed
   notify: Restart Tsidp service
 
-- name: Ensure tsidp service is started
+- name: Ensure tsidp service is running
   ansible.builtin.systemd_service:
       name: tsidp-pod.service
       state: started
       daemon_reload: true
+  when: not (tsidp_files_changed.changed or tsidp_secrets_changed.changed)
