--- a/ansible/roles/dumbassets/tasks/main.yml
+++ b/ansible/roles/dumbassets/tasks/main.yml
@@ -8,6 +8,7 @@
   ansible.builtin.copy:
       src: "dumbassets/"
       dest: "/etc/containers/systemd/dumbassets/"
+  register: dumbassets_files_changed
   notify: Restart Dumbassets service
 
 - name: Ensure dumbassets service secrets are available
@@ -16,10 +17,12 @@
       name: "ts-authkey"
       data: "{{ tailscale.ts_authkey }}"
   no_log: true
+  register: dumbassets_secrets_changed
   notify: Restart Dumbassets service
 
-- name: Ensure dumbassets service is started
+- name: Ensure dumbassets service is running
   ansible.builtin.systemd_service:
       name: dumbassets-pod.service
       state: started
       daemon_reload: true
+  when: not (dumbassets_files_changed.changed or dumbassets_secrets_changed.changed)
