--- a/ansible/roles/dumbdo/tasks/main.yml
+++ b/ansible/roles/dumbdo/tasks/main.yml
@@ -8,6 +8,7 @@
   ansible.builtin.copy:
       src: "dumbdo/"
       dest: "/etc/containers/systemd/dumbdo/"
+  register: dumbdo_files_changed
   notify: Restart Dumbdo service
 
 - name: Ensure dumbdo service secrets are available
@@ -16,10 +17,12 @@
       name: "ts-authkey"
       data: "{{ tailscale.ts_authkey }}"
   no_log: true
+  register: dumbdo_secrets_changed
   notify: Restart Dumbdo service
 
-- name: Ensure dumbdo service is started
+- name: Ensure dumbdo service is running
   ansible.builtin.systemd_service:
       name: dumbdo-pod.service
       state: started
       daemon_reload: true
+  when: not (dumbdo_files_changed.changed or dumbdo_secrets_changed.changed)
