--- a/ansible/roles/glance/tasks/main.yml
+++ b/ansible/roles/glance/tasks/main.yml
@@ -8,6 +8,7 @@
   ansible.builtin.copy:
       src: "glance/"
       dest: "/etc/containers/systemd/glance/"
+  register: glance_files_changed
   notify: Restart Glance service
 
 - name: Ensure glance service secrets are available
@@ -16,10 +17,12 @@
       name: "ts-authkey"
       data: "{{ tailscale.ts_authkey }}"
   no_log: true
+  register: glance_secrets_changed
   notify: Restart Glance service
 
-- name: Ensure glance service is started
+- name: Ensure glance service is running
   ansible.builtin.systemd_service:
       name: glance-pod.service
       state: started
       daemon_reload: true
+  when: not (glance_files_changed.changed or glance_secrets_changed.changed)
