--- a/ansible/roles/memos/tasks/main.yml
+++ b/ansible/roles/memos/tasks/main.yml
@@ -8,6 +8,7 @@
   ansible.builtin.copy:
       src: "memos/"
       dest: "/etc/containers/systemd/memos/"
+  register: memos_files_changed
   notify: Restart Memos service
 
 - name: Ensure memos service secrets are available
@@ -16,10 +17,12 @@
       name: "ts-authkey"
       data: "{{ tailscale.ts_authkey }}"
   no_log: true
+  register: memos_secrets_changed
   notify: Restart Memos service
 
-- name: Ensure memos service is started
+- name: Ensure memos service is running
   ansible.builtin.systemd_service:
       name: memos-pod.service
       state: started
       daemon_reload: true
+  when: not (memos_files_changed.changed or memos_secrets_changed.changed)
