--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -3,7 +3,7 @@
   hosts: cloudlab
   become: true
   gather_facts: false
-  strategy: free
+  # strategy: free
   vars_files:
       - vault.yml
   roles:
@@ -13,7 +13,7 @@
   hosts: cloudlab
   become: true
   gather_facts: false
-  strategy: free
+  # strategy: free
   vars_files:
       - vault.yml
   roles:
