Add SMTP secrets for Bitwarden and Pocket-Id services

--- a/ansible/roles/pocket-id/tasks/main.yml
+++ b/ansible/roles/pocket-id/tasks/main.yml
@@ -14,8 +14,39 @@
 - name: Ensure pocket-id service secrets are available
   containers.podman.podman_secret:
       state: present
-      name: "cf-tunnel-token"
-      data: "{{ cloudflare.cf_tunnel_token }}"
+      name: "{{ item.name }}"
+      data: "{{ item.data }}"
+  loop:
+      - name: cf-tunnel-token
+        data: "{{ cloudflare.cf_tunnel_token }}"
+      - name: id-app-url
+        data: "{{ pocketid.id_app_url }}"
+      - name: id-trust-proxy
+        data: "{{ pocketid.id_trust_proxy }}"
+      - name: id-emails-verified
+        data: "{{ pocketid.id_emails_verified }}"
+      - name: id-allow-user-signups
+        data: "{{ pocketid.id_allow_user_signups }}"
+      - name: id-disable-animations
+        data: "{{ pocketid.id_disable_animations }}"
+      - name: id-smtp-host
+        data: "{{ pocketid.id_smtp_host }}"
+      - name: id-smtp-port
+        data: "{{ pocketid.id_smtp_port }}"
+      - name: id-smtp-from
+        data: "{{ pocketid.id_smtp_from }}"
+      - name: id-smtp-user
+        data: "{{ pocketid.id_smtp_user }}"
+      - name: id-smtp-password
+        data: "{{ pocketid.id_smtp_password }}"
+      - name: id-smtp-tls
+        data: "{{ pocketid.id_smtp_tls }}"
+      - name: id-email-login-notification-enabled
+        data: "{{ pocketid.id_email_login_notification_enabled }}"
+      - name: id-email-one-time-access-as-admin-enabled
+        data: "{{ pocketid.id_email_one_time_access_as_admin_enabled }}"
+      - name: id-email-api-key-expiration-enabled
+        data: "{{ pocketid.id_email_api_key_expiration_enabled }}"
   no_log: true
   register: pocket_id_secrets_changed
   notify: Restart Pocket-Id service
