--- a/ansible/roles/bitwarden/tasks/main.yml
+++ b/ansible/roles/bitwarden/tasks/main.yml
@@ -27,6 +27,18 @@
         data: "{{ bitwarden.bw_installation_key }}"
       - name: bw-admins
         data: "{{ bitwarden.bw_admins }}"
+      - name: bw-reply-to-email
+        data: "{{ bitwarden.bw_reply_to_email }}"
+      - name: bw-smtp-host
+        data: "{{ bitwarden.bw_smtp_host }}"
+      - name: bw-smtp-port
+        data: "{{ bitwarden.bw_smtp_port }}"
+      - name: bw-smtp-ssl
+        data: "{{ bitwarden.bw_smtp_ssl }}"
+      - name: bw-smtp-username
+        data: "{{ bitwarden.bw_smtp_username }}"
+      - name: bw-smtp-password
+        data: "{{ bitwarden.bw_smtp_password }}"
   register: bitwarden_secrets_changed
   no_log: true
   notify: Restart Bitwarden service
