--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -1,22 +1,12 @@
 ---
-- name: Cloudlab general setup
+- name: Cloudlab server setup
   hosts: cloudlab
   become: true
   gather_facts: false
-  # strategy: free
   vars_files:
       - vault.yml
   roles:
       - common
-
-- name: Cloudlab services deployment
-  hosts: cloudlab
-  become: true
-  gather_facts: false
-  # strategy: free
-  vars_files:
-      - vault.yml
-  roles:
       - pocket-id
       - stalwart
       - gitea
