--- a/ansible/roles/stalwart/tasks/main.yml
+++ b/ansible/roles/stalwart/tasks/main.yml
@@ -23,14 +23,14 @@
       path: "/etc/containers/systemd/stalwart"
       state: directory
 
-- name: Ensure stalwart service files are in place
+- name: Ensure Stalwart service files are in place
   ansible.builtin.copy:
       src: "stalwart/"
       dest: "/etc/containers/systemd/stalwart/"
   register: stalwart_files_changed
   notify: Restart Stalwart service
 
-- name: Ensure stalwart service is running
+- name: Ensure Stalwart service is running
   ansible.builtin.systemd_service:
       name: stalwart-pod.service
       state: started
