--- a/ansible/roles/tsidp/tasks/main.yml
+++ b/ansible/roles/tsidp/tasks/main.yml
@@ -4,14 +4,14 @@
       path: "/etc/containers/systemd/tsidp"
       state: directory
 
-- name: Ensure tsidp service files are in place
+- name: Ensure Tsidp service files are in place
   ansible.builtin.copy:
       src: "tsidp/"
       dest: "/etc/containers/systemd/tsidp/"
   register: tsidp_files_changed
   notify: Restart Tsidp service
 
-- name: Ensure tsidp service secrets are available
+- name: Ensure Tsidp service secrets are available
   containers.podman.podman_secret:
       state: present
       name: "ts-authkey"
@@ -20,7 +20,7 @@
   register: tsidp_secrets_changed
   notify: Restart Tsidp service
 
-- name: Ensure tsidp service is running
+- name: Ensure Tsidp service is running
   ansible.builtin.systemd_service:
       name: tsidp-pod.service
       state: started
