--- a/ansible/roles/searxng/handlers/main.yml
+++ b/ansible/roles/searxng/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Restart Searxng service
+- name: Restart SearXNG service
   ansible.builtin.systemd_service:
       name: searxng-pod.service
       state: restarted
