Add Immich config file and update container/service setup
- Add immich.json template for Immich configuration - Mount config file
into Immich server container - Refactor Immich container env vars and
secrets to use config file - Add DB hostname secret and update secret
handling order - Add Tailscale repo setup to common role - Update TODO
with vault secret naming task - Reorder roles in site.yml for
consistency

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -5,6 +5,12 @@
       state: latest
       update_cache: true
 
+- name: Ensure tailscale repo is added
+  ansible.builtin.command:
+      cmd: dnf config-manager addrepo --from-repofile=https://pkgs.tailscale.com/stable/fedora/tailscale.repo
+  args:
+      creates: /etc/yum.repos.d/tailscale.repo
+
 - name: Ensure packages are installed
   ansible.builtin.dnf:
       name:
