Disable cockpit firewall rule and email dashboard port

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -56,7 +56,7 @@
       permanent: true
       immediate: true
   loop:
-      - cockpit
+      # - cockpit
       - pmproxy
 
 - name: Ensure monitoring and container services are started
