--- a/mise.toml
+++ b/mise.toml
@@ -1,4 +1,11 @@
 [tools]
+ansible = "latest"
+github-cli = "latest"
 openbao = "latest"
 opentofu = "latest"
-"pipx:ansible" = "latest"
+pipx = "latest"
+usage = "latest"
+uv = "latest"
+
+[tasks.deploy]
+run = "cd ansible && ansible-playbook site.yml"
