Capitalize service names in Ansible task descriptions

--- a/ansible/roles/bitwarden/tasks/main.yml
+++ b/ansible/roles/bitwarden/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Ensure bitwarden folder exists
+- name: Ensure Bitwarden folder exists
   ansible.builtin.file:
       path: "/etc/containers/systemd/bitwarden"
       state: directory
