--- a/ansible/roles/dumbassets/tasks/main.yml
+++ b/ansible/roles/dumbassets/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Ensure dumbassets folder exists
+- name: Ensure Dumbassets folder exists
   ansible.builtin.file:
       path: "/etc/containers/systemd/dumbassets"
       state: directory
