--- a/ansible/roles/jellyfin/tasks/main.yml
+++ b/ansible/roles/jellyfin/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Ensure jellyfin folder exists
+- name: Ensure Jellyfin folder exists
   ansible.builtin.file:
       path: "/etc/containers/systemd/jellyfin"
       state: directory
