--- a/ansible/roles/memos/tasks/main.yml
+++ b/ansible/roles/memos/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Ensure memos folder exists
+- name: Ensure Memos folder exists
   ansible.builtin.file:
       path: "/etc/containers/systemd/memos"
       state: directory
